// DBML untuk modul Workforce Structure HRIS Backend
// Source: docs/PRD/workforce-structure.md (v1.0.0)
// Scope 1.0.0: 3 pilar bagan organisasi internal — Department, Job Title, Job Position.
// Depends on: docs/databases/organization.dbml (companies.id) — FK dideklarasikan, staged sampai Organization migration ada (scoping-convention.md §4).
// Belum ada migration existing untuk domain ini — DBML ini adalah spec awal, bukan hasil sinkronisasi dari SQL yang sudah jalan.

Project HRIS_Workforce_Structure {
  database_type: 'PostgreSQL'
  Note: 'Department (hierarki), Job Title (grade per-PT), Job Position (kursi = Department x Job Title, reporting line, headcount) — position-based org chart.'
}

Table departments {
  id uuid [pk, default: `gen_random_uuid()`]
  company_id uuid [not null, note: 'Company-owned scope. Staged: FK ke companies.id aktif setelah migration Organization ada (scoping-convention.md §4).']
  code varchar(20) [not null, note: 'Unik dalam satu Company — partial unique index (company_id, code) WHERE deleted_at IS NULL (idx_departments_company_code).']
  name varchar(150) [not null]
  parent_id uuid [note: 'Self-referencing hierarki. NULL = root department. Cycle dicegah di application layer (ErrHierarchyCycle), bukan constraint DB — lihat tech-spec.md §7.2.']
  is_active boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  deleted_at timestamp [default: `null`]

  indexes {
    (company_id, code) [unique, name: 'idx_departments_company_code', note: 'Partial: WHERE deleted_at IS NULL']
    company_id [name: 'idx_departments_company_id']
    parent_id [name: 'idx_departments_parent_id']
  }
}

Table job_titles {
  id uuid [pk, default: `gen_random_uuid()`]
  company_id uuid [not null, note: 'Company-owned scope — tiap PT punya grade/pangkat sendiri (bukan Global master). Staged: FK ke companies.id aktif setelah migration Organization ada.']
  code varchar(20) [not null, note: 'Unik dalam satu Company — partial unique index (company_id, code) WHERE deleted_at IS NULL (idx_job_titles_company_code).']
  name varchar(100) [not null]
  grade_level int [not null, note: 'Makin tinggi = pangkat makin tinggi (PRD §7.2). Tidak ada CHECK range di scope 1.0.0.']
  is_active boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  deleted_at timestamp [default: `null`]

  indexes {
    (company_id, code) [unique, name: 'idx_job_titles_company_code', note: 'Partial: WHERE deleted_at IS NULL']
    company_id [name: 'idx_job_titles_company_id']
  }
}

Table job_positions {
  id uuid [pk, default: `gen_random_uuid()`]
  company_id uuid [not null, note: 'Denormalized dari department_id — bukan kolom independen. Diisi otomatis dari Department.CompanyID saat create, divalidasi harus sama dengan job_title.CompanyID (ErrJobPositionCompanyMismatch). Lihat decision-log.md ADR-001.']
  department_id uuid [not null, note: 'ErrDepartmentNotFound kalau tak dikenal (PRD §4).']
  job_title_id uuid [not null, note: 'ErrJobTitleNotFound kalau tak dikenal (PRD §4).']
  name varchar(150) [not null]
  reports_to_id uuid [note: 'Self-referencing reporting line (org chart). NULL = top position. WAJIB se-company (ErrReportingCompanyMismatch, PRD §4). Cycle dicegah application layer (ErrHierarchyCycle) — lihat tech-spec.md §7.2, decision-log.md ADR-002.']
  headcount_quota int [not null, default: 1, note: 'CHECK headcount_quota >= 1. Default 1 kalau tidak diisi (decision-log.md ADR-003), bukan reject.']
  is_active boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  deleted_at timestamp [default: `null`]

  indexes {
    company_id [name: 'idx_job_positions_company_id']
    department_id [name: 'idx_job_positions_department_id']
    job_title_id [name: 'idx_job_positions_job_title_id']
    reports_to_id [name: 'idx_job_positions_reports_to_id']
  }
}

Ref: departments.company_id > companies.id
Ref: departments.parent_id > departments.id
Ref: job_titles.company_id > companies.id
Ref: job_positions.company_id > companies.id
Ref: job_positions.department_id > departments.id
Ref: job_positions.job_title_id > job_titles.id
Ref: job_positions.reports_to_id > job_positions.id
